--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="/favicon.ico" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
    
-
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     
-
+  <!-- <link rel="manifest" href="%PUBLIC_URL%/" /> -->
     <title>LearnLingo</title>
 
     <script type="text/javascript">
